# generation-toolkit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cog.toml  flake.nix
.github/workflows/: release.yaml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  error.rs  main.rs  util.rs
crates/cli/src/commands/: stable.rs
flake-parts/: cargo.nix  python.nix  shells.nix  stablediffusion.nix  torch.nix
