[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.0"

[workspace.dependencies]
anyhow = "1.0.68"
serde_json = "1.0.87"
thiserror = "1.0.38"
tracing = "0.1.37"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]

[profile.release.package]
