[package]
name = "generation-toolkit"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0.19", features = ["derive"] }
# serde = { workspace = true }
# serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.16"
chatgpt_rs = "1.1.8"
ignore = "0.4.20"
diffusers = "0.3.1"
tch = "0.13.0"
